소켓 연결중....

--- a/src/config.json
+++ b/src/config.json
@@ -1,3 +1,3 @@
 {
-  "SOCKET_SERVER": "https://port-0-node-express-4fuvwk25lcr25shb.gksl2.cloudtype.app/"
+  "SOCKET_SERVER": "http://port-0-node-express-4fuvwk25lcr25shb.gksl2.cloudtype.app:1313/"
 }
