--- a/src/config.json
+++ b/src/config.json
@@ -1,3 +1,12 @@
 {
-  "SOCKET_SERVER": "http://port-0-node-express-4fuvwk25lcr25shb.gksl2.cloudtype.app/"
+  "PATH_TYPE:": "TSET",
+
+  "LOCAL":{
+    "SOCKET_SERVER": "http://localhost:3500/"
+  },
+
+  "DEV":{
+    "SOCKET_SERVER": "http://port-0-node-express-4fuvwk25lcr25shb.gksl2.cloudtype.app/"
+  }
+
 }
