--- a/src/config.json
+++ b/src/config.json
@@ -1,8 +1,8 @@
 {
-  "PATH_TYPE": "DEV",
+  "PATH_TYPE": "LOCAL",
 
   "LOCAL":{
-    "SOCKET_SERVER": "http://localhost:3500/"
+    "SOCKET_SERVER": "http://localhost:3000/"
   },
 
   "DEV":{
