소켓 작업중..

--- a/src/config.json
+++ b/src/config.json
@@ -2,7 +2,7 @@
   "PATH_TYPE": "LOCAL",
 
   "LOCAL":{
-    "SOCKET_SERVER": "http://localhost:3000/"
+    "SOCKET_SERVER": "http://localhost:3000"
   },
 
   "DEV":{
