--- a/src/config.json
+++ b/src/config.json
@@ -2,10 +2,12 @@
   "PATH_TYPE": "DEV",
 
   "LOCAL":{
+    "SERVER_PATH:" : "http://localhost:3000",
     "SOCKET_SERVER": "http://localhost:6000"
   },
 
   "DEV":{
+    "SERVER_PATH:" : "https://https://34.134.138.247/",
     "SOCKET_SERVER": "http://port-0-node-express-4fuvwk25lcr25shb.gksl2.cloudtype.app/"
   }
 
