--- a/src/config.json
+++ b/src/config.json
@@ -7,7 +7,7 @@
   },
 
   "DEV":{
-    "SERVER_PATH:" : "http://34.134.138.247/",
+    "SERVER_PATH:" : "https://www.koomsday.com/",
     "SOCKET_SERVER": "http://port-0-node-express-4fuvwk25lcr25shb.gksl2.cloudtype.app/"
   }
 
