--- a/src/config.json
+++ b/src/config.json
@@ -1,5 +1,5 @@
 {
-  "PATH_TYPE": "DEV",
+  "PATH_TYPE": "LOCAL",
 
   "LOCAL":{
     "SERVER_PATH:" : "http://localhost:3000/",
@@ -7,7 +7,7 @@
   },
 
   "DEV":{
-    "SERVER_PATH:" : "https://www.koomsday.com/",
+    "SERVER_PATH:" : "https://www.koomsday.com/api",
     "SOCKET_SERVER": "http://port-0-node-express-4fuvwk25lcr25shb.gksl2.cloudtype.app/"
   }
 
