--- a/.env.development
+++ b/.env.development
@@ -1,3 +1,3 @@
 port=3500
-REACT_APP_SERVER_PATH = http://localhost:3000/
+REACT_APP_SERVER_PATH = http://127.0.0.1:3000/api
 REACT_APP_SOCKET_SERVER = http://localhost:1111/
