파이어 베이스 구글 로그인

--- a/.env.production
+++ b/.env.production
@@ -1,3 +1,13 @@
 port=3500
 REACT_APP_SERVER_PATH = 'https://www.koomsday.com/api'
 REACT_APP_SOCKET_SERVER = 'http://port-0-node-express-4fuvwk25lcr25shb.gksl2.cloudtype.app/'
+
+
+REACT_APP_FIREBASE_API_KEY = 'AIzaSyD1VIFVV3bKtlXF0Gbf98g8E-G-Tcc7yM8'
+REACT_APP_FIREBASE_AUTH_DOMAIN = 'kooms-day.firebaseapp.com'
+REACT_APP_FIREBASE_DATABASE_URL = 'https://kooms-day-default-rtdb.asia-southeast1.firebasedatabase.app'
+REACT_APP_FIREBASE_PROJECT_ID = 'kooms-day'
+REACT_APP_FIREBASE_STORAGE_BUCKET = 'kooms-day.appspot.com'
+REACT_APP_FIREBASE_MSG_SENDER_ID = '227343921859'
+REACT_APP_FIREBASE_APP_ID = '1:227343921859:web:fb39b5329ff07e0aee2876'
+REACT_APP_FIREBASE_MESUREMENT_ID = 'G-EZS3S4CVCW'
